# vertex

./: CMakeLists.txt  test.c  vertex.c  vertex.h
include/: vertex.h
ring/: CMakeLists.txt  ring.c  ring.h  run.sh  stdatomic.h  test.c
src/: CMakeLists.txt  vertex.c
test/: CMakeLists.txt  test.c  test.cpp
